// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Url 1`] = `
<div>
  No data available for
</div>
`;

exports[`Should render full Url 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title"
    >
      <a
        href="https://adoption.gouv.fr"
        rel="noreferrer noopener"
        target="_blank"
      >
        https://adoption.gouv.fr
      </a>
    </h4>
    <p
      className="fr-callout__text"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        dnum
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        enfance
      </button>
      <svg
        fill="none"
        height={12}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={12}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        title="2021-04-05T01:14:51.162Z"
      >
        Mise à jour il y a :
         
        environ 23 heures
      </span>
    </p>
    <div>
      <img
        alt="Copie d'écran de https://adoption.gouv.fr"
        src="https://dashlord.incubateur.net/report/aHR0cHM6Ly9hY2Nlc2xpYnJlLmJldGEuZ291di5mcg==/screenshot.jpeg"
      />
    </div>
  </div>,
  <div
    id="lighthouse"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        LightHouse
      </h5>
      <span>
        Informations collectées par l'outil Google LightHouse
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/lhr.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <div>
            Moins de 25% des critères d'accessibilité peuvent être testés automatiquement,
             
            <strong>
              une expertise manuelle est requise
            </strong>
            .
            <br />
            <br />
            Ce score ne représente pas le score RGAA mais une partie des bonnes pratiques de base à appliquer.
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Accessibility
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Performance
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              SEO
            </div>
            <div>
              58%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Best Practices
            </div>
            <div>
              47%
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              First contentful Paint
            </div>
            <div>
              4.1s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Time to interactive
            </div>
            <div>
              4.1s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total requests
            </div>
            <div>
              41
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total weight
            </div>
            <div>
              339.7Kb
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="updownio"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Temps de réponse
      </h5>
      <span>
        Informations collectées par updown.io
      </span>
      <a
        href="https://updown.io/rt57"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Taux de disponibilité sur un mois glissant
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Temps de réponse
            </div>
            <div>
              655ms
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              APDEX
            </div>
            <div>
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                0.8
              </button>
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              Certificat TLS
               
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                valide
              </button>
            </div>
            <div>
              expire le 21/06/2021
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="testssl"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        SSL
      </h5>
      <span>
        Informations collectées via testssl.sh
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/testssl.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <h3>
            Scan Summary :
             
            <button
              className=""
              onClick={[Function]}
              type="button"
            >
              A+
            </button>
          </h3>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="nmap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Nmap
      </h5>
      <span>
        <span>
          Scan des vulnérabiliés nmap
           
          <a
            href="https://adoption.gouv.fr"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "white",
              }
            }
            target="_blank"
          >
            https://adoption.gouv.fr
          </a>
        </span>
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/nmapvuln.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          D
        </button>
      </h3>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            NMap
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Sévérité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Service à l'écoute
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Vulnérabilités
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  danger
                </button>
              </td>
              <td>
                http (port:80)
              </td>
              <td>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2017-7679"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2017-7679
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2017-3167"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2017-3167
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/PACKETSTORM:127546"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    PACKETSTORM:127546
                  </a>
                  <br />
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  danger
                </button>
              </td>
              <td>
                ssh (port:22)
              </td>
              <td>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2015-5600"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2015-5600
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2015-6564"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2015-6564
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2018-15919"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2018-15919
                  </a>
                  <br />
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                smtp (port:25)
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="http"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        HTTP
      </h5>
      <span>
        Informations collectées par le Mozilla HTTP observatory
      </span>
      <a
        href="https://observatory.mozilla.org/analyze/adoption.gouv.fr"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          B
        </button>
      </h3>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            HTTP
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Impact
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Description
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Documentation
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  -25
                </button>
              </td>
              <td>
                Content Security Policy (CSP) header not implemented
              </td>
              <td>
                <a
                  href="https://owasp.org/www-community/controls/Content_Security_Policy"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Doc Content Security Policy
                </a>
                . L'extension
                 
                <a
                  href="https://github.com/april/laboratory"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  github.com/april/laboratory
                </a>
                 
                permet de générer la CSP pour votre application.
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="thirdparties"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Third parties
      </h5>
      <span>
        Scripts tiers embarqués dans la page web
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Cookies
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Cookies
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Domaine
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                HTTP Only
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Secure
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                BIGipServerpool-dicom-adoption-preprod.cegedim.cloud-HTTP
              </td>
              <td>
                adoption.gouv.fr
              </td>
              <td>
                ✔️
              </td>
              <td>
                ✔️
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            End Points
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Flag
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Hostname
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                IP
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                City
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Country
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 85.333 512 341.333"
                >
                  <title>
                    France
                  </title>
                  <path
                    d="M0 85.331h512v341.337H0z"
                    fill="#FFF"
                  />
                  <path
                    d="M0 85.331h170.663v341.337H0z"
                    fill="#0052B4"
                  />
                  <path
                    d="M341.337 85.331H512v341.337H341.337z"
                    fill="#D80027"
                  />
                </svg>
              </td>
              <td>
                adoption.gouv.fr
              </td>
              <td>
                185.194.82.145
              </td>
              <td>
                ?
              </td>
              <td>
                France
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="zap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP
      </h5>
      <span>
        Scan de vulnérabiliés OWASP baseline
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/zap.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Owasp
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Risk/Confidence
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  High (High)
                </button>
              </td>
              <td>
                PII Disclosure
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (High)
                </button>
              </td>
              <td>
                Content Security Policy (CSP) Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Vulnerable JS Library
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Source Code Disclosure - PHP
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                Strict-Transport-Security Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Incomplete or No Cache-control and Pragma HTTP Header Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Feature Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Secure Pages Include Mixed Content
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Absence of Anti-CSRF Tokens
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Big Redirect Detected (Potential Sensitive Information Leak)
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="nuclei"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Nuclei
      </h5>
      <span>
        Détection d'erreurs de configuration et vulnérabilités
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Nuclei
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Séverité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                id
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Matcher
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                waf-detect
              </td>
              <td>
                WAF Detection
              </td>
              <td>
                bigip
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                waf-detect
              </td>
              <td>
                WAF Detection
              </td>
              <td>
                ats
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="wappalyzer"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Wappalyzer
      </h5>
      <span>
        Détection des technologies
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Wappalyzer
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Categories
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Website
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                SPIP
              </td>
              <td>
                CMS
              </td>
              <td>
                <a
                  href="http://www.spip.net"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://www.spip.net
                </a>
              </td>
            </tr>
            <tr>
              <td>
                PHP
              </td>
              <td>
                Programming languages
              </td>
              <td>
                <a
                  href="http://php.net"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://php.net
                </a>
              </td>
            </tr>
            <tr>
              <td>
                jQuery Migrate
              </td>
              <td>
                JavaScript libraries
              </td>
              <td>
                <a
                  href="https://github.com/jquery/jquery-migrate"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://github.com/jquery/jquery-migrate
                </a>
              </td>
            </tr>
            <tr>
              <td>
                jQuery
              </td>
              <td>
                JavaScript libraries
              </td>
              <td>
                <a
                  href="https://jquery.com"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://jquery.com
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="stats"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Stats
      </h5>
      <span>
        <span>
          Détection de la page /
          stats
        </span>
      </span>
      <a
        href="https://adoption.gouv.fr/stats"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          A
        </button>
      </h3>
    </div>
  </div>,
]
`;

exports[`Should render full Url with screenshot 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title"
    >
      <a
        href="https://adoption.gouv.fr"
        rel="noreferrer noopener"
        target="_blank"
      >
        https://adoption.gouv.fr
      </a>
    </h4>
    <p
      className="fr-callout__text"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        dnum
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        enfance
      </button>
      <svg
        fill="none"
        height={12}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={12}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        title="2021-04-05T01:14:51.162Z"
      >
        Mise à jour il y a :
         
        environ 23 heures
      </span>
    </p>
    <div>
      <img
        alt="Copie d'écran de https://adoption.gouv.fr"
        src="https://dashlord.incubateur.net/report/aHR0cHM6Ly9hY2Nlc2xpYnJlLmJldGEuZ291di5mcg==/screenshot.jpeg"
      />
    </div>
  </div>,
  <div
    id="lighthouse"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        LightHouse
      </h5>
      <span>
        Informations collectées par l'outil Google LightHouse
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/lhr.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <div>
            Moins de 25% des critères d'accessibilité peuvent être testés automatiquement,
             
            <strong>
              une expertise manuelle est requise
            </strong>
            .
            <br />
            <br />
            Ce score ne représente pas le score RGAA mais une partie des bonnes pratiques de base à appliquer.
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Accessibility
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Performance
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              SEO
            </div>
            <div>
              58%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Best Practices
            </div>
            <div>
              47%
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              First contentful Paint
            </div>
            <div>
              4.1s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Time to interactive
            </div>
            <div>
              4.1s
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total requests
            </div>
            <div>
              41
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
        >
          <div>
            <div>
              Total weight
            </div>
            <div>
              339.7Kb
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="updownio"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Temps de réponse
      </h5>
      <span>
        Informations collectées par updown.io
      </span>
      <a
        href="https://updown.io/rt57"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Taux de disponibilité sur un mois glissant
            </div>
            <div>
              100%
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              io
            </div>
            <div>
              Temps de réponse
            </div>
            <div>
              655ms
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              APDEX
            </div>
            <div>
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                0.8
              </button>
            </div>
          </div>
        </div>
        <div
          className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-mb-3w"
        >
          <div>
            <div>
              Certificat TLS
               
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                valide
              </button>
            </div>
            <div>
              expire le 21/06/2021
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="testssl"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        SSL
      </h5>
      <span>
        Informations collectées via testssl.sh
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/testssl.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-grid-row"
      >
        <div
          className="fr-col"
        >
          <h3>
            Scan Summary :
             
            <button
              className=""
              onClick={[Function]}
              type="button"
            >
              A+
            </button>
          </h3>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="nmap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Nmap
      </h5>
      <span>
        <span>
          Scan des vulnérabiliés nmap
           
          <a
            href="https://adoption.gouv.fr"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "white",
              }
            }
            target="_blank"
          >
            https://adoption.gouv.fr
          </a>
        </span>
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/nmapvuln.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          D
        </button>
      </h3>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            NMap
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Sévérité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Service à l'écoute
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Vulnérabilités
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  danger
                </button>
              </td>
              <td>
                http (port:80)
              </td>
              <td>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2017-7679"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2017-7679
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2017-3167"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2017-3167
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/PACKETSTORM:127546"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    PACKETSTORM:127546
                  </a>
                  <br />
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  danger
                </button>
              </td>
              <td>
                ssh (port:22)
              </td>
              <td>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2015-5600"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2015-5600
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2015-6564"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2015-6564
                  </a>
                  <br />
                </div>
                <div>
                  <a
                    href="https://vulners.com/cve/CVE-2018-15919"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CVE-2018-15919
                  </a>
                  <br />
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                smtp (port:25)
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="http"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        HTTP
      </h5>
      <span>
        Informations collectées par le Mozilla HTTP observatory
      </span>
      <a
        href="https://observatory.mozilla.org/analyze/adoption.gouv.fr"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          B
        </button>
      </h3>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            HTTP
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Impact
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Description
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Documentation
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  -25
                </button>
              </td>
              <td>
                Content Security Policy (CSP) header not implemented
              </td>
              <td>
                <a
                  href="https://owasp.org/www-community/controls/Content_Security_Policy"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Doc Content Security Policy
                </a>
                . L'extension
                 
                <a
                  href="https://github.com/april/laboratory"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  github.com/april/laboratory
                </a>
                 
                permet de générer la CSP pour votre application.
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="thirdparties"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Third parties
      </h5>
      <span>
        Scripts tiers embarqués dans la page web
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Cookies
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Cookies
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Domaine
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                HTTP Only
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Secure
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                BIGipServerpool-dicom-adoption-preprod.cegedim.cloud-HTTP
              </td>
              <td>
                adoption.gouv.fr
              </td>
              <td>
                ✔️
              </td>
              <td>
                ✔️
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            End Points
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Flag
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Hostname
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                IP
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                City
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Country
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 85.333 512 341.333"
                >
                  <title>
                    France
                  </title>
                  <path
                    d="M0 85.331h512v341.337H0z"
                    fill="#FFF"
                  />
                  <path
                    d="M0 85.331h170.663v341.337H0z"
                    fill="#0052B4"
                  />
                  <path
                    d="M341.337 85.331H512v341.337H341.337z"
                    fill="#D80027"
                  />
                </svg>
              </td>
              <td>
                adoption.gouv.fr
              </td>
              <td>
                185.194.82.145
              </td>
              <td>
                ?
              </td>
              <td>
                France
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="zap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP
      </h5>
      <span>
        Scan de vulnérabiliés OWASP baseline
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/aHR0cHM6Ly9hZG9wdGlvbi5nb3V2LmZy/zap.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Owasp
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Risk/Confidence
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  High (High)
                </button>
              </td>
              <td>
                PII Disclosure
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (High)
                </button>
              </td>
              <td>
                Content Security Policy (CSP) Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Vulnerable JS Library
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Source Code Disclosure - PHP
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                Strict-Transport-Security Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Incomplete or No Cache-control and Pragma HTTP Header Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Feature Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Secure Pages Include Mixed Content
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Absence of Anti-CSRF Tokens
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Big Redirect Detected (Potential Sensitive Information Leak)
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="nuclei"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Nuclei
      </h5>
      <span>
        Détection d'erreurs de configuration et vulnérabilités
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Nuclei
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Séverité
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                id
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Matcher
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                waf-detect
              </td>
              <td>
                WAF Detection
              </td>
              <td>
                bigip
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  info
                </button>
              </td>
              <td>
                waf-detect
              </td>
              <td>
                WAF Detection
              </td>
              <td>
                ats
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="wappalyzer"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Wappalyzer
      </h5>
      <span>
        Détection des technologies
      </span>
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Wappalyzer
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Categories
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Website
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                SPIP
              </td>
              <td>
                CMS
              </td>
              <td>
                <a
                  href="http://www.spip.net"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://www.spip.net
                </a>
              </td>
            </tr>
            <tr>
              <td>
                PHP
              </td>
              <td>
                Programming languages
              </td>
              <td>
                <a
                  href="http://php.net"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://php.net
                </a>
              </td>
            </tr>
            <tr>
              <td>
                jQuery Migrate
              </td>
              <td>
                JavaScript libraries
              </td>
              <td>
                <a
                  href="https://github.com/jquery/jquery-migrate"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://github.com/jquery/jquery-migrate
                </a>
              </td>
            </tr>
            <tr>
              <td>
                jQuery
              </td>
              <td>
                JavaScript libraries
              </td>
              <td>
                <a
                  href="https://jquery.com"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://jquery.com
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    id="stats"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        Stats
      </h5>
      <span>
        <span>
          Détection de la page /
          stats
        </span>
      </span>
      <a
        href="https://adoption.gouv.fr/stats"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <h3>
        Scan Summary :
         
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          A
        </button>
      </h3>
    </div>
  </div>,
]
`;

exports[`Tools config Should render Url with limited tools 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title"
    >
      <a
        rel="noreferrer noopener"
        target="_blank"
      />
    </h4>
    <p
      className="fr-callout__text"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        dnum
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        enfance
      </button>
      <svg
        fill="none"
        height={12}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={12}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        title="2021-04-05T01:14:51.162Z"
      >
        Mise à jour il y a :
         
        environ 23 heures
      </span>
    </p>
    <div>
      <img
        alt="Copie d'écran de undefined"
        src="https://dashlord.incubateur.net/report/aHR0cHM6Ly9hY2Nlc2xpYnJlLmJldGEuZ291di5mcg==/screenshot.jpeg"
      />
    </div>
  </div>,
  <div
    id="zap"
  />,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP
      </h5>
      <span>
        Scan de vulnérabiliés OWASP baseline
      </span>
      <a
        href="https://jest.demo.com/dashlord/report/dW5kZWZpbmVk/zap.html"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      />
    </div>
    <div>
      <div
        className="fr-table fr-table--no-caption"
      >
        <table>
          <caption
            data-testid="table-caption"
          >
            Owasp
          </caption>
          <thead>
            <tr>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Risk/Confidence
              </th>
              <th
                className=""
                onClick={[Function]}
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  High (High)
                </button>
              </td>
              <td>
                PII Disclosure
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (High)
                </button>
              </td>
              <td>
                Content Security Policy (CSP) Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Vulnerable JS Library
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Medium (Medium)
                </button>
              </td>
              <td>
                Source Code Disclosure - PHP
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (High)
                </button>
              </td>
              <td>
                Strict-Transport-Security Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Incomplete or No Cache-control and Pragma HTTP Header Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Feature Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Secure Pages Include Mixed Content
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Absence of Anti-CSRF Tokens
              </td>
            </tr>
            <tr>
              <td>
                <button
                  className="w-100"
                  onClick={[Function]}
                  type="button"
                >
                  Low (Medium)
                </button>
              </td>
              <td>
                Big Redirect Detected (Potential Sensitive Information Leak)
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;
